--- a/css/styles.css
+++ b/css/styles.css
@@ -100,11 +100,15 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-color: rgba(51, 51, 51, 1);
+            min-width: 1133px;
         }
         
         .silex-id-1489143154957-0 {
             min-height: 810px;
             background-color: transparent;
+            top: 15px;
+            left: 100px;
+            width: 1133px;
         }
         
         @media only screen and (max-width: 480px),
@@ -172,9 +176,9 @@
         }
         
         .silex-id-1513342859782-0 {
-            width: 185px;
-            min-height: 70px;
-            top: 798px;
-            left: 1134px;
+            width: 85px;
+            min-height: 31px;
+            top: 768px;
+            left: 1020px;
         }
     
